--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,7 @@
 <body>
     
     <header>
-        <h1 class="titulo">ITS_Hytera</h1>
+        <h1 class="titulo">ITS_RFID</h1>
     </header>
 
     <div class="nav-bg">
@@ -52,7 +52,7 @@
           </svg>
         <nav class="navegacion-principal contenedor"> 
             <a href="index.html">Inicio</a> 
-            <a href="produtos.html">Productos</a> 
+            <a href="products.html">Productos</a> 
             <a href="about.html">Nosotros</a> 
         </nav>
     </div>
@@ -95,12 +95,23 @@
         </form>
     </section>
     <p>En caso de requerir una atención más especializada comunicate por medio de las siguientes opciones.</p>
-    <a href="mailto:correo@correo.com" subject=Consultas%20de%20tarjetas20%rfid=Deseo%20información%20sobre%20las%20tarjetas»> Envianos un correo </a>
-    <a href="mailto:correo@correo.com" subject=Consultas%20de%20tarjetas20%rfid=Deseo%20información%20sobre%20las%20tarjetas»> Envianos un whatsapp </a>
-    <a href="mailto:correo@correo.com" subject=Consultas%20de%20tarjetas20%rfid=Deseo%20información%20sobre%20las%20tarjetas»> Llamanos </a>
+    <a href="https://wa.me/numero" text> Envianos un whatsapp </a>
+    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00b341" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+        <path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" />
+      </svg>
+    <br>
+    <a href="tel:numero"> Llámanos </a>
+    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+      </svg>
     
-    <footer>
-
+    <footer class="footer_format"> 
+        <p>Tu tarjeta de presentación a tu alcance</p>
+        <p>Todos los derechos reservados ITS_Hytera</p>
+        <p>Cotiza tu página en <a href="https://cuyox3.com/Documentaci%C3%B3n/Contacto.html">CuyoX3</a></p>
     </footer>
 
 
