--- a/templates/index.html
+++ b/templates/index.html
@@ -37,24 +37,30 @@
 </head>
 <body>
     <header> 
-        <h1 class="titulo">ITS_Hytera</h1>
+        <h1 class="titulo">ITS_RFID</h1>
     </header>
 
     <div class="nav-bg">
+        <div>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-nfc" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <path d="M11 20a3 3 0 0 1 -3 -3v-11l5 5" />
             <path d="M13 4a3 3 0 0 1 3 3v11l-5 -5" />
             <path d="M4 4m0 3a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v10a3 3 0 0 1 -3 3h-10a3 3 0 0 1 -3 -3z" />
           </svg>
-        <nav class="navegacion-principal contenedor"> 
-            <a href="products.html">Productos</a> 
-            <a href="contact.html">Contacto</a> 
-            <a href="about.html">Nosotros</a> 
-        </nav>
+        </div>
+            <div>
+            <nav class="navegacion-principal contenedor"> 
+                <a href="products.html">Productos</a> 
+                <a href="contact.html">Contacto</a> 
+                <a href="about.html">Nosotros</a> 
+            </nav>
+        </div>
     </div>
 
-    <footer> 
+    <p>Aqui va el contenido cuyo</p>
+
+    <footer class="footer_format"> 
         <p>Tu tarjeta de presentación a tu alcance</p>
         <p>Todos los deerechos reservados ITS_Hytera</p>
         <p>Cotiza tu página en <a href="https://cuyox3.com/Documentaci%C3%B3n/Contacto.html">CuyoX3/Contáctanos</a></p>
