--- a/templates/products.html
+++ b/templates/products.html
@@ -55,8 +55,12 @@
         </nav>
     </div>
 
-    <footer>
-        
+    <p>AQUI VA EL CONTENIDO CUYO</p>
+
+    <footer class="footer_format"> 
+        <p>Tu tarjeta de presentación a tu alcance</p>
+        <p>Todos los derechos reservados ITS_Hytera</p>
+        <p>Cotiza tu página en <a href="https://cuyox3.com/Documentaci%C3%B3n/Contacto.html">CuyoX3/Contáctanos</a></p>
     </footer>
 
 
