--- a/templates/about.html
+++ b/templates/about.html
@@ -53,11 +53,12 @@
             <a href="products.html">Productos</a> 
         </nav>
     </div>
-
-    <footer>
-        
+    <p>AQUI VA EL CONTENIDO CUYO</p>
+    <footer class="footer_format"> 
+        <p>Tu tarjeta de presentación a tu alcance</p>
+        <p>Todos los derechos reservados ITS_Hytera</p>
+        <p>Cotiza tu página en <a href="https://cuyox3.com/Documentaci%C3%B3n/Contacto.html">CuyoX3/Contáctanos</a></p>
     </footer>
 
-
 </body>
-</html>t
+</html>
