--- a/rcs/style.css
+++ b/rcs/style.css
@@ -1,8 +1,8 @@
 :root{
 --celadon: #74d3aeff;
 --taupe: #48392aff;
---bistre: #43281cff;
 --champagne: #f6e7cbff;
+--oscuro: #212121;
 }
 
 html{
@@ -27,11 +27,27 @@ body{
 .navegacion-principal{
     padding: 1rem;
     display:flex;
+    flex-direction: column;
     justify-content: space-around;
 }
+
+@media (min-width: 480px){
+    .navegacion-principal{
+        flex-direction: row;
+    }
+}
+
 .navegacion-principal a{
     color: var(--taupe);
     text-decoration: none;
+    font-size: 2rem;
+    font-weight: 800;
+    padding: 1rem;
+}
+
+.navegacion-principal a:hover {
+    background-color: var(--celadon);
+    color: var(--oscuro);
 }
 
 .footer_format{
