--- a/templates/products.html
+++ b/templates/products.html
@@ -37,7 +37,7 @@
 <body>
     
     <header>
-        <h1 class="titulo">ITS_Hytera</h1>
+        <h1 class="titulo">ITS_RFID</h1>
     </header>
 
     <div class="nav-bg">
