--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-
-    <div class="container-fluid ">
-        <header class="<!-- -->d-flex <!-- --> flex-wrap justify-content-center py-3 mb-4 border-bottom nav-bg">
+    <div class="container=fluid ">
+        <header class=" flex-wrap justify-content-center py-3 mb-4 border-bottom nav-bg">
             <ul class="nav nav-pills">
             <li > <img src="../rcs/img/ITS - LOGO.webp" alt="Pagina web logo"  href="./index.html" style="padding:10 ; width: 150px;"> </li>
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Inico</a></li>
