--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,44 +18,51 @@
     <meta property="og:image:secure_url" content=""/>
 
     <!-- Stylesheets-->
-
-    <!-- Para normalizar -->
+    
     <!-- LOGO -->
     <link rel="shortcut icon" href="" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/51a07909a2.js" crossorigin="anonymous"></script>
+
     <!-- Normalizacion -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet" >
+    <link rel="stylesheet" href="../rcs/reset.css">
+
     <!-- Para fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+          
     <!-- Para íconos -->
     <link href="../rcs/style.css" rel="stylesheet">
-    <!-- Principal -->
+    <!-- JavaScript -->
     <script src="../script/scripts.js"></script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
     
-    <header>
-        <h1 class="titulo">ITS_RFID</h1>
-    </header>
+    <!-- Barra de Navegacion -->
+    <nav class="py-5 navbar navbar-expand-md bg-dark navbar-dark border-bottom">
+        <div class="container-fluid">
+            <img src="../rcs/img/ITS - LOGO.webp" alt="Pagina web logo"  href="./index.html" style="width: 200px; margin-right: auto; margin-left: 15px;">
+            
+            <button type="button" class="navbar-toggler px-4" data-bs-toggle="collapse" data-bs-target="#menu_navegacion" style="margin-right:20px;">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <div class="nav-bg">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-address-book" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M20 6v12a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2z" />
-            <path d="M10 16h6" />
-            <path d="M13 11m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-            <path d="M4 8h3" />
-            <path d="M4 12h3" />
-            <path d="M4 16h3" />
-          </svg>
-        <nav class="navegacion-principal contenedor"> 
-            <a href="index.html">Inicio</a> 
-            <a href="products.html">Productos</a> 
-            <a href="about.html">Nosotros</a> 
-        </nav>
-    </div>
+            <div class="collapse navbar-collapse" id="menu_navegacion">
+                <ul class="h4 navbar-nav nav-pills ms-auto px-5"> 
+                  <li class="nav-item px-2"><a href="#" class="nav-link active" aria-current="page" style="background-color: red;">Inicio</a></li>
+                  <li class="nav-item px-2"><a href="#" class="nav-link">Productos</a></li>
+                  <li class="nav-item px-2"><a href="#" class="nav-link">Contactanos</a></li>
+                  <li class="nav-item px-2"><a href="#" class="nav-link container-auto">Podría Interesarte</a></li>
+                  <li class="nav-item px-2"><a href="#" class="nav-link">Sobre Nosotros</a></li>
+                </ul>
+          </div>
+        </div>
+    </nav>
 
     <section>
         <h2>Comunicate con nosotros</h2>
@@ -94,26 +101,148 @@
             </fieldset>
         </form>
     </section>
-    <p>En caso de requerir una atención más especializada comunicate por medio de las siguientes opciones.</p>
-    <a href="https://wa.me/numero" text> Envianos un whatsapp </a>
-    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00b341" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
-        <path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" />
-      </svg>
-    <br>
-    <a href="tel:numero"> Llámanos </a>
-    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
-      </svg>
-    
-    <footer class="footer_format"> 
-        <p>Tu tarjeta de presentación a tu alcance</p>
-        <p>Todos los derechos reservados ITS_Hytera</p>
-        <p>Cotiza tu página en <a href="https://cuyox3.com/Documentaci%C3%B3n/Contacto.html">CuyoX3</a></p>
-    </footer>
+    <section>
 
+        <p>En caso de requerir una atención más especializada comunicate por medio de las siguientes opciones.</p>
+        <a href="https://wa.me/numero" text> Envianos un whatsapp </a>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00b341" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+            <path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" />
+        </svg>
+        <br>
+        <a href="tel:numero"> Llámanos </a>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+        </svg>
+    </section>
+    
+    <!-- Footer -->
+    <section class="bg-dark mt-5" style="border-radius: 7% 7% 0 0">
+        <footer class="container">
+            <div class="row text-light justify-content-center mx-sm-0 mx-4 " style="border-radius: 45px 0% 45px; height: auto; max-width: 1130px; background-color: red; position: relative; top: -30px;">
+
+              <div class="col-lg-4 col-md-6 d-flex justify-content-md-center py-lg-5 py-4" style="padding: 0 20px;">
+
+                <div class="container-auto align-content-center">
+
+                  <div class=" bg-light align-content-center text-center" 
+                        style="border-radius: 100%; width: 52px; height: 52px; margin-right: 18px;">
+                        <i class="fa fa-phone" style="font-size:20px;color:red"></i>
+                  </div>
+
+                </div>
+
+                <div class="align-content-center">
+                  <p style="font-size: 20px; font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto;font-weight: 600; font-style: normal; margin: 8px 0 0 0;">
+                    Llámanos
+                  </p>
+                  <p style="font-size: 16px; font-family: 'Poppins', sans-serif; font-weight: 400;font-style: normal; margin: 0;">
+                    +52 (055) 5775- 1661
+                  </p>
+                  <p style="font-size: 16px; font-family: 'Poppins', sans-serif; font-weight: 400;font-style: normal; margin: 0;">
+                    +52 (055) 2233-1633.</p> 
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex justify-content-md-center py-lg-5 py-4" style="padding: 0 20px;">
+                
+                <div class="container-auto align-content-center">
+
+                  <div class=" bg-light align-content-center text-center" 
+                        style="border-radius: 100%; width: 52px; height: 52px; margin-right: 18px;">
+                        <i class="fas fa-envelope" style="font-size:20px;color:red"></i>
+                  </div>
+
+                </div>
+
+                <div class="align-content-center">
+                  <p style="font-size: 20px; font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto;font-weight: 600; font-style: normal; margin: 8px 0 0 0;">
+                    Escríbenos
+                  </p>
+                  <p style="font-size: 16px; font-family: 'Poppins', sans-serif; font-weight: 400;font-style: normal; margin: 0;">
+                    ventas@itsseguridad.com.mx
+                  </p>  
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex justify-content-md-center py-lg-5 py-4" style="padding: 0 20px;">
+
+                <div class="container-auto align-content-center">
+
+                  <div class=" bg-light align-content-center text-center" 
+                        style="border-radius: 100%; width: 52px; height: 52px; margin-right: 18px;">
+                    <img src="../rcs/img/PIN.png" alt="pin ubicación" style="max-height: 20px;">
+                  </div>
+
+                </div>
+
+                <div class="align-content-center">
+                  <p style="font-size: 20px; font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto;font-weight: 600; font-style: normal; margin: 8px 0 0 0;">
+                    Visítanos
+                  </p>
+                  <p style="font-size: 16px; font-family: 'Poppins', sans-serif; font-weight: 400;font-style: normal; margin: 0;">
+                    Calzada de los Jinetes, Arboledas, Tlalnepantla de Baz, Edo Mex, Mx.</p>
+                </div>
+
+              </div>
+              
+            </div>
+            
+            <div class="row bg-transparent text-light " style="padding-top: 50px;">
+
+              <div class="d-flex flex-column col-sm col-12 mb-5 ps-sm-0 ps-5" style="max-width: 310px; min-width: 300px;">
+                <img src="../rcs/img/ITS - LOGO.webp" alt="Pagina web logo"  href="./index.html" style="width: 150px; margin-bottom: 20px;">
+                <h6 style="font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto; font-weight: 400;font-style: normal; font-size: 15px; margin-bottom: 20px; line-height: 22.5px;">
+                  Con más de 22 años de seguridad nos especializamos en instalación de Control de acceso, CCTV, Automatización en hogares, oficinas y corporativos, Biométricos y Cercas electrificadas.
+                </h6>
+                <div class="container-auto ">
+                  <a style="margin-right: 15px;" href=""><img src="../rcs/img/facebook.png"  alt="facebook"   style="max-height: 35px;"></a>
+                  <a style="margin-right: 15px;" href=""><img src="../rcs/img/gorjeo.png"    alt="X"          style="max-height: 35px;"></a>
+                  <a style="margin-right: 15px;" href=""><img src="../rcs/img/youtube.png"   alt="youtube"    style="max-height: 35px;"></a>
+                  <a style="margin-right: 15px;" href=""><img src="../rcs/img/tik-tok.png"   alt="tiktok"     style="max-height: 35px;"></a>
+                  <a style="margin-right: 15px;" href=""><img src="../rcs/img/instagram.png" alt="instagram"  style="max-height: 35px;"></a>
+                </div>
+              </div>
+              <div class="d-flex flex-column col-sm col-12 mb-5 px-sm-0 px-5 ps-sm-4" style="max-width: 190px;">
+                <h2 style="color: red; margin-bottom: 20px;">Hipervínculos</h2>
+                <ul class="nav flex-column" style="font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto; font-weight: 400;font-style: normal; font-size: 15px; line-height: 22.5px;">
+                  <li class="nav-item my-2"><a href="#" class="nav-link p-0 text-light">Acerca de</a></li>
+                  <li class="nav-item my-2"><a href="#" class="nav-link p-0 text-light">Servicios</a></li>
+                  <li class="nav-item my-2"><a href="#" class="nav-link p-0 text-light">Contacto</a></li>
+                </ul>
+              </div>
+              <div class="d-flex flex-column col-sm col-12 mb-5 ps-sm-0 px-5" style="max-width: 204px;">
+                <h2 style="color: red; margin-bottom: 20px;">Más Hipervínculos</h2>
+                <ul class="nav flex-column" style="font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto; font-weight: 400;font-style: normal; font-size: 15px; line-height: 22.5px;">
+                  <li class="nav-item my-2"><a href="#" class="nav-link p-0 text-light">Políticas de privacidad</a></li>
+                  <li class="nav-item my-2"><a href="#" class="nav-link p-0 text-light">FAQ</a></li>
+                </ul>
+              </div>
+              <div class="d-flex flex-column col-md col-12 mb-5 px-sm-0 px-5 w-sm-100 w-50" >
+                <h2 style="color: red; margin-bottom: 20px;">Cotizar</h2>
+
+                <h6 class="text-light" style="font-family: 'Red Hat Text', sans-serif; font-optical-sizing: auto; font-weight: 400;font-style: normal; font-size: 15px; margin-bottom: 25px; line-height: 22.5px;">Recibe una cotización personalizada fácil y rápido.</h6>
+
+                <button id="boton_rojo" type="button" class="btn py-4" style="width: 200px;">Solicitar cotización</button>
+                
+              </div>
+            </div>
+
+            <div class="row bg-transparent text-light" style="margin-top: 60px;">
+            
+                <p class="col text-end" style="margin-bottom: 20px; font-family: 'Red Hat Text', sans-serif;
+                font-optical-sizing: auto; font-weight: 400; font-style: normal; font-size: 15px; line-height: 23px;"> 
+                  Copyright © ITS Seguridad 2022. Todos los derechos reservados.
+                </p>
+
+            </div>
+
+        </footer>    
+    </section> 
 
 </body>
 </html>
